--- a/styles/globals.css
+++ b/styles/globals.css
@@ -183,6 +183,7 @@ main {
 
 .image-number {
   display: block;
+  visibility: visible;
 }
 
 .image-first {
@@ -268,6 +269,7 @@ main {
   letter-spacing: -9.5px;
   font-weight: 500;
   grid-column: 1 / -1;
+  visibility: visible;
 }
 
 .contact-large-second {
@@ -281,6 +283,7 @@ main {
   grid-column: 1 / -1;
   display: flex;
   justify-content: flex-end;
+  visibility: visible;
 }
 
 .credits-container {
@@ -363,7 +366,8 @@ main {
 .credits-info-first {
   grid-column: 3 / -1;
 }
-@media only screen and (max-width: 640px) {
+
+@media only screen and (max-width: 737px) {
   .landing-section {
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -474,5 +478,497 @@ main {
     display: block;
     position: relative;
     grid-column: unset;
+  }
+
+  .contact-section {
+    position: relative;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 16px;
+    font-weight: 300;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+  }
+
+  .contact-large-first {
+    display: none;
+    visibility: hidden;
+  }
+
+  .contact-large-second {
+    display: none;
+    visibility: hidden;
+  }
+
+  .credits-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .credits-title {
+    height: 0.8em;
+    line-height: 0.8em;
+    font-size: 40px;
+    letter-spacing: -2px;
+  }
+
+  .credits-grid {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    column-gap: 1rem;
+    row-gap: 0px;
+    grid-auto-flow: column;
+    font-weight: 300;
+    padding-top: 3rem;
+  }
+
+  .credits-info-first {
+    grid-column: 1 / -1;
+  }
+
+  .credits-images-normal {
+    position: relative;
+    height: 200px;
+    width: 100%;
+  }
+
+  .credits-images-full-span {
+    position: relative;
+    height: 400px;
+    width: 100%;
+    grid-column: 1 / -1;
+  }
+
+  .credits-video-container {
+    position: relative;
+    height: 100%;
+    min-height: 200px;
+    width: 100%;
+  }
+
+  .credits-video-overlay {
+    position: relative;
+    cursor: url('/png/play_video.png'), auto;
+    height: 100%;
+    width: 100%;
+  }
+
+  .credits-video-iframe {
+    width: 100%;
+    min-width: fit-content;
+    height: 100%;
+    min-height: 200px;
+    position: relative;
+  }
+}
+
+@media only screen and (min-width: 738px) and (max-width: 1023px) {
+  .landing-section {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+  }
+
+  .landing-grid {
+    display: block;
+  }
+
+  .landing-text-first {
+    height: 0.8em;
+    line-height: 0.8em;
+    font-size: 110px;
+    letter-spacing: -2px;
+  }
+
+  .landing-text-second {
+    height: 0.8em;
+    line-height: 0.8em;
+    font-size: 110px;
+    letter-spacing: -2px;
+  }
+
+  .landing-text-third {
+    height: 0.8em;
+    line-height: 0.8em;
+    font-size: 110px;
+    letter-spacing: -2px;
+  }
+
+  .landing-text-fourth {
+    height: 0.8em;
+    line-height: 0.8em;
+    font-size: 110px;
+    letter-spacing: -2px;
+  }
+
+  .arrow-section {
+    visibility: hidden;
+    display: none;
+  }
+
+  .image-section {
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+  }
+
+  .image-overlay {
+    display: none;
+    visibility: hidden;
+  }
+
+  .image-number {
+    display: none;
+    visibility: hidden;
+  }
+
+  .image-grid {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    column-gap: 1rem;
+    row-gap: 0px;
+    grid-auto-flow: column;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .image-first {
+    width: 100%;
+    height: 200px;
+    display: block;
+    position: relative;
+    grid-column: unset;
+  }
+
+  .image-second {
+    width: 100%;
+    height: 200px;
+    display: block;
+    position: relative;
+    grid-column: unset;
+  }
+
+  .image-third {
+    width: 100%;
+    height: 200px;
+    display: block;
+    position: relative;
+    grid-column: unset;
+  }
+
+  .image-fourth {
+    width: 100%;
+    height: 200px;
+    display: block;
+    position: relative;
+    grid-column: unset;
+  }
+
+  .image-fifth {
+    width: 100%;
+    height: 200px;
+    display: block;
+    position: relative;
+    grid-column: unset;
+  }
+
+  .contact-section {
+    position: relative;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 16px;
+    font-weight: 300;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+  }
+
+  .contact-large-first {
+    display: none;
+    visibility: hidden;
+  }
+
+  .contact-large-second {
+    display: none;
+    visibility: hidden;
+  }
+
+  .credits-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .credits-title {
+    height: 0.8em;
+    line-height: 0.8em;
+    font-size: 40px;
+    letter-spacing: -2px;
+  }
+
+  .credits-grid {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    column-gap: 1rem;
+    row-gap: 0px;
+    grid-auto-flow: column;
+    font-weight: 300;
+    padding-top: 3rem;
+  }
+
+  .credits-info-first {
+    grid-column: 1 / -1;
+  }
+
+  .credits-images-normal {
+    position: relative;
+    height: 200px;
+    width: 100%;
+  }
+
+  .credits-images-full-span {
+    position: relative;
+    height: 400px;
+    width: 100%;
+    grid-column: 1 / -1;
+  }
+
+  .credits-video-container {
+    position: relative;
+    height: 100%;
+    min-height: 200px;
+    width: 100%;
+  }
+
+  .credits-video-overlay {
+    position: relative;
+    cursor: url('/png/play_video.png'), auto;
+    height: 100%;
+    width: 100%;
+  }
+
+  .credits-video-iframe {
+    width: 100%;
+    min-width: fit-content;
+    height: 100%;
+    min-height: 200px;
+    position: relative;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1280px) {
+  .landing-section {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+  }
+
+  .landing-grid {
+    display: block;
+  }
+
+  .landing-text-first {
+    height: 0.8em;
+    line-height: 0.8em;
+    font-size: 150px;
+    letter-spacing: -2px;
+  }
+
+  .landing-text-second {
+    height: 0.8em;
+    line-height: 0.8em;
+    font-size: 150px;
+    letter-spacing: -2px;
+  }
+
+  .landing-text-third {
+    height: 0.8em;
+    line-height: 0.8em;
+    font-size: 150px;
+    letter-spacing: -2px;
+  }
+
+  .landing-text-fourth {
+    height: 0.8em;
+    line-height: 0.8em;
+    font-size: 150px;
+    letter-spacing: -2px;
+  }
+
+  .arrow-section {
+    visibility: hidden;
+    display: none;
+  }
+
+  .image-section {
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+  }
+
+  .image-overlay {
+    display: none;
+    visibility: hidden;
+  }
+
+  .image-number {
+    display: none;
+    visibility: hidden;
+  }
+
+  .image-grid {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    column-gap: 1rem;
+    row-gap: 0px;
+    grid-auto-flow: column;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .image-first {
+    width: 100%;
+    height: 200px;
+    display: block;
+    position: relative;
+    grid-column: unset;
+  }
+
+  .image-second {
+    width: 100%;
+    height: 200px;
+    display: block;
+    position: relative;
+    grid-column: unset;
+  }
+
+  .image-third {
+    width: 100%;
+    height: 200px;
+    display: block;
+    position: relative;
+    grid-column: unset;
+  }
+
+  .image-fourth {
+    width: 100%;
+    height: 200px;
+    display: block;
+    position: relative;
+    grid-column: unset;
+  }
+
+  .image-fifth {
+    width: 100%;
+    height: 200px;
+    display: block;
+    position: relative;
+    grid-column: unset;
+  }
+
+  .contact-section {
+    position: relative;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 16px;
+    font-weight: 300;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+  }
+
+  .contact-large-first {
+    display: none;
+    visibility: hidden;
+  }
+
+  .contact-large-second {
+    display: none;
+    visibility: hidden;
+  }
+
+  .credits-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .credits-title {
+    height: 0.8em;
+    line-height: 0.8em;
+    font-size: 40px;
+    letter-spacing: -2px;
+  }
+
+  .credits-grid {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    column-gap: 1rem;
+    row-gap: 0px;
+    grid-auto-flow: column;
+    font-weight: 300;
+    padding-top: 3rem;
+  }
+
+  .credits-info-first {
+    grid-column: 1 / -1;
+  }
+
+  .credits-images-normal {
+    position: relative;
+    height: 200px;
+    width: 100%;
+  }
+
+  .credits-images-full-span {
+    position: relative;
+    height: 400px;
+    width: 100%;
+    grid-column: 1 / -1;
+  }
+
+  .credits-video-container {
+    position: relative;
+    height: 100%;
+    min-height: 200px;
+    width: 100%;
+  }
+
+  .credits-video-overlay {
+    position: relative;
+    cursor: url('/png/play_video.png'), auto;
+    height: 100%;
+    width: 100%;
+  }
+
+  .credits-video-iframe {
+    width: 100%;
+    min-width: fit-content;
+    height: 100%;
+    min-height: 200px;
+    position: relative;
   }
 }
