--- a/styles/globals.css
+++ b/styles/globals.css
@@ -238,6 +238,12 @@ main {
   height: 400px;
   position: relative;
 }
+.image-ninth {
+  grid-column: 3 / span 7;
+  width: 912px;
+  height: 400px;
+  position: relative;
+}
 
 .contact-section {
   position: relative;
@@ -524,7 +530,13 @@ main {
     position: relative;
     grid-column: unset;
   }
-
+  .image-ninth {
+    width: 100%;
+    height: 200px;
+    display: block;
+    position: relative;
+    grid-column: unset;
+  }
   .contact-section {
     position: relative;
     padding-right: 0.5rem;
